DigicielFull/force-app/main/default/objects/gnx__Data_Modification_Log__c/gnx__Data_Modification_Log__c.object-meta.xml
<CustomObject>
    <label>Log de modification de données</label>
    <nameField>
        <displayFormat>DML-{0000}</displayFormat>
        <label>Data Modification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de modification de données</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>