DigicielFull/force-app/main/default/objects/gnx__Data_Modification_Log__c/fields/gnx__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>gnx__Error_Message__c</fullName>
    <description>Message d&apos;erreur dans le cas d&apos;une modification sans succès</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>