DigicielFull/force-app/main/default/objects/gnx__Data_Modification_Log__c/fields/gnx__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Record_Id__c</fullName>
    <description>Identifiant sur lequel la modification à eu lieu.</description>
    <label>Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>