DigicielFull/force-app/main/default/objects/gnx__Data_Modification_Log__c/fields/gnx__Status__c.field-meta.xml
<CustomField>
    <fullName>gnx__Status__c</fullName>
    <description>Statut de la modification. Si elle a réussi le statut sera &quot;Succès&quot; sinon &quot;Erreur&quot; .</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <default>true</default>
                <label>Success</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>